fix margins for restaurant cards on tablet screens

--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ html {
   height: 20rem;
   width: 100%;
   max-width: 28rem;
-  margin: 2rem 0rem;
+  margin: 1.2rem;
 }
 @media screen and (min-width: 768px) {
   .restaurant__card {
